--- a/CSC470-P3/CSC470-P4/CSC470-P4.csproj
+++ b/CSC470-P3/CSC470-P4/CSC470-P4.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormCreateProject.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCreateProject.Designer.cs">
+      <DependentUpon>FormCreateProject.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -58,13 +64,43 @@
     <Compile Include="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormModifyProject.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormModifyProject.Designer.cs">
+      <DependentUpon>FormModifyProject.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormRemoveProject.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormRemoveProject.Designer.cs">
+      <DependentUpon>FormRemoveProject.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormSelectProject.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormSelectProject.Designer.cs">
+      <DependentUpon>FormSelectProject.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormCreateProject.resx">
+      <DependentUpon>FormCreateProject.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormModifyProject.resx">
+      <DependentUpon>FormModifyProject.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormRemoveProject.resx">
+      <DependentUpon>FormRemoveProject.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormSelectProject.resx">
+      <DependentUpon>FormSelectProject.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
